further nav.css changes to squash bug

--- a/styles/main.css
+++ b/styles/main.css
@@ -142,8 +142,6 @@ body {
     margin-top: 10px;
     color: #e7af3f;
     text-decoration: none;
-    transition-property: background-color;
-    transition-duration: .5s;
     border-radius: 4px;
     text-transform: uppercase;
 }
