--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,3 +1,8 @@
 #topnav a:hover {
     background-color: #8d6b28;
 }
+
+#topnav a{
+transition-property: background-color;
+transition-duration: .5s;
+}
